--- a/client/package.json
+++ b/client/package.json
@@ -7,9 +7,11 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.3",
+    "bootstrap": "^5.2.2",
     "cdbreact": "^1.5.3",
     "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-bootstrap": "^1.6.6",
     "react-dom": "^18.2.0",
     "react-file-base64": "^1.0.3",
     "react-router-dom": "^6.4.3",
